Changes for 1.1alpha1:

 - added frontends/php/include/html.inc.php (Alexei)
 - added support for real delta. item.delta=2. (Alexei)
 - new selection for triggers.php (Alexei)
 - new selection for items.php (Alexei)
 - removed helpdesk.php (Alexei)
 - fixed check of permissions for screenedit.php (Alexei)
 - new selection for graphs in charts.php (Alexei)
 - new selection of maps in maps.php (Alexei)
 - new selection of group and host for latest.php (Alexei)
 - added support for macro {IPADDRESS} (Alexei)
 - added support of localisation (Alexei)
 - added file frontends/php/include/locale_en.inc.php (Alexei)
 - fixed check of NNTP service (Alexei)
 - show metrics (3.01 Gb) in alert messages (Alexei)
 - added support for configurable after-login screen (Alexei)
 - added column users.url (Alexei)
 - email routines moved to email.c (Alexei)
 - fixed hosts.php. Changed <? to <?php. (Alexei)
 - fixed number of trapped items in STATUS OF ZABBIX. Thanks to Igor. (Alexei)
 - fixed proc_cnt[zabbix_agentd] under Linux (Alexei)
 - added list of hosts for groups and IP addresses in host maintenance (Alexei)
 - fixed MacOS X related compilation issues. Thanks to Charles Galpin. (Alexei)
 - fixed calculation of maximum values for table 'trends'. Thanks to Igor. (Alexei)
 - fixed evaluation of expressions when a number contains spaces (Alexei)
 - added Gentoo start-up scripts. Thanks to Andreas Tophofen. (Alexei)
 - fixed PostgreSQL schema. Removed unnecessary comma. (Alexei)

Changes for 1.0:

 - changed graph legend a little bit. Thanks to Igor. (Alexei)
 - added support of IP adresses returned by SNMP agents (Alexei)
 - fixed serious issue with sending of alerts (Alexei)
 - small fix in latestalarms.php (Alexei)
 - added support for simple check 'tcp,<port>' (Alexei)
 - added template 'Application.MySQL' (Alexei)
 - added button "add items from template" (Alexei)
 - added template 'Host.SNMP'. Thanks to Kenneth Durrant. (Alexei)
 - fixed host statistics in report1.php (Alexei)