@@ -1,1 +1,3 @@
 alter table users add  url			varchar(255)	DEFAULT '' NOT NULL;
+alter table sysmaps add  use_background		int(4)	DEFAULT 0 NOT NULL;
+alter table sysmaps add  background		blob	DEFAULT '' NOT NULL;
